--- a/configs/agents/verification.yaml
+++ b/configs/agents/verification.yaml
@@ -10,7 +10,7 @@ anchor_script_path: assets/blender_script/anchor_verification.py
 camera_template_file: ${agent.critic.camera_template_file}
 camera_setting_file: ${agent.critic.camera_setting_file}
 
-verification_attempts: 5
+verification_attempts: 3
 
 input_schema:
   type: state
@@ -28,7 +28,7 @@ template_file: templates/prompt/verification.yaml
 
 use_model: True
 
-model_name: gpt-4o-mini
+model_name: ${agent.critic.model_name}
 model_provider: ~
 #model_api_key: <API-KEY>
 output_schema_as_tool: True
