--- a/configs/agents/coding.yaml
+++ b/configs/agents/coding.yaml
@@ -27,7 +27,7 @@ template_file: templates/prompt/coding.yaml
 
 use_model: True
 
-model_name: qwen/qwen3-coder
+model_name: minimax/minimax-m2
 model_provider: ~
 #model_api_key: <API-KEY>
 output_schema_as_tool: True
