--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_API_KEY=???
 
-#Nghi Ngo
-OPENROUTER_API_KEY=??
+BASE_URL=https://openrouter.ai/api/v1
 
 KMP_DUPLICATE_LIB_OK=true
 HYDRA_FULL_ERROR=1
