--- a/configs/agents/verification.yaml
+++ b/configs/agents/verification.yaml
@@ -28,7 +28,7 @@ template_file: templates/prompt/verification.yaml
 
 use_model: True
 
-model_name: ${agent.critic.model_name}
+model_name: gpt-4o-mini
 model_provider: ~
 #model_api_key: <API-KEY>
 output_schema_as_tool: True
